# catbot

./: .env.example  .gitignore  README.md  deploy.sh  pyproject.toml  run.py
catbot/: __init__.py  agent.py  cli.py  gateway.py  memory.py  session.py  tools.py
catbot/channels/: __init__.py  base.py  cli.py  feishu.py
catbot/providers/: __init__.py  anthropic.py  base.py  openai.py
deploy/: catbot.service  catbot@.service
examples/: feishu_bot.py  hello_world.py
