[project]
name = "catbot"
version = "0.1.0"
description = "A minimal Python agent framework with Feishu support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["agent", "llm", "feishu", "lark", "chatbot", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "loguru>=0.7.0",
    "aiofiles>=24.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.50.0"]
anthropic = ["anthropic>=0.40.0"]
feishu = ["lark-oapi>=1.3.0"]
all = [
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "lark-oapi>=1.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
]

[project.scripts]
catbot = "catbot.cli:main"

[project.urls]
Homepage = "https://github.com/dcqbot/catbot"
Repository = "https://github.com/dcqbot/catbot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
