[project]
name = "catbot"
version = "0.1.0"
description = "A minimal Python agent framework with Feishu support, inspired by openclaw"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["agent", "llm", "feishu", "lark", "chatbot", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "loguru>=0.7.0",
    "aiofiles>=24.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.50.0"]
anthropic = ["anthropic>=0.40.0"]
feishu = ["lark-oapi>=1.3.0"]
all = [
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "lark-oapi>=1.3.0",
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/KinglittleQ/catbot"
Repository = "https://github.com/KinglittleQ/catbot"
Issues = "https://github.com/KinglittleQ/catbot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
